# busy-bee-be/interface/http/handler/qa/request.go
@@ -1,0 +1,5 @@
+package qa
+
+type askRequest struct {
+	Question string `json:"question"`
+}
